Added link to map.html

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 
-kerbside_curblr_url: https://fordkerbhack.azure-api.net
+kerbside_curblr_url:https://fordkerbhack.azure-api.net
+dvla_api_key:og52H4hK9k4mOZH09dAru2bPmIBkQC6F4LNBD83J
