--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "snyk test",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "snyk": "^1.341.1",
     "tailwindcss": "^1.1.4",
     "volleyball": "^1.5.1"
-  }
+  },
+  "snyk": true
 }
