--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,18 @@
   "main": "postcss.config.js",
   "dependencies": {
     "autoprefixer": "^9.7.3",
-    "postcss-cli": "^6.1.3",
+    "postcss-cli": "^7.0.0",
+    "snyk": "^1.341.1",
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "postcss css/tailwind.css -o main.css -w"
+    "test": "snyk test",
+    "watch": "postcss css/tailwind.css -o main.css -w",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "snyk": true
 }
