--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "postcss.config.js",
   "dependencies": {
     "autoprefixer": "^9.7.3",
-    "postcss-cli": "^7.0.0",
+    "postcss": ">=8.2.10",
     "snyk": "^1.563.0",
     "tailwindcss": "^1.1.4"
   },
